fixing mobile spacing

--- a/sass/1_general/_video.sass
+++ b/sass/1_general/_video.sass
@@ -6,6 +6,7 @@
   img
     display: inline-block
     transition: all .15s ease-in-out
+    display: inline-block
 
   img:hover
     border: 2px solid $green
